Fix ProcessBuilder path and remove Xms to avoid memory leaks